--- a/src/main/resources/MainWindow/mainWindow.fxml
+++ b/src/main/resources/MainWindow/mainWindow.fxml
@@ -40,6 +40,7 @@
    </top>
    <center>
       <Pane prefHeight="73.0" prefWidth="121.0" BorderPane.alignment="CENTER">
+          <Button>Test</Button>
          <children>
             <Label layoutX="205.0" prefHeight="56.0" prefWidth="167.0" style="-fx-font-weight: bold;" text="25 Grad" textFill="WHITE">
                <font>
