--- a/src/main/resources/MainWindow/mainWindow.fxml
+++ b/src/main/resources/MainWindow/mainWindow.fxml
@@ -41,7 +41,7 @@
    <center>
       <Pane prefHeight="73.0" prefWidth="121.0" BorderPane.alignment="CENTER">
          <children>
-            <Label layoutX="205.0" prefHeight="56.0" prefWidth="167.0" style="-fx-font-weight: bold;" text="25 Grad" textFill="WHITE">
+            <Label fx:id="temp" layoutX="205.0" prefHeight="56.0" prefWidth="167.0" style="-fx-font-weight: bold;" text="25 Grad" textFill="WHITE">
                <font>
                   <Font size="45.0" />
                </font>
@@ -53,21 +53,21 @@
             </ImageView>
             <Button layoutX="480.0" layoutY="14.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="106.0" styleClass="wetteranzeige" text="Wetteranzeige" />
 
-            <Pane layoutX="180.0" layoutY="213.0" prefHeight="148.0" prefWidth="108.0" styleClass="subPane" style="-fx-background-color: #FFF;">
+            <Pane onMouseClicked="#changeDayThree" layoutX="180.0" layoutY="213.0" prefHeight="148.0" prefWidth="108.0" styleClass="subPane" style="-fx-background-color: #FFF;">
                <children>
                   <Label fx:id="dayThree" layoutX="29.0" layoutY="14.0" style="-fx-font-weight: bold;" text="Mittwoch" />
                </children></Pane>
-            <Pane layoutX="464.0" layoutY="213.0" prefHeight="148.0" prefWidth="108.0" styleClass="subPane" style="-fx-background-color: #FFF;">
+            <Pane onMouseClicked="#changeDayFive" layoutX="464.0" layoutY="213.0" prefHeight="148.0" prefWidth="108.0" styleClass="subPane" style="-fx-background-color: #FFF;">
                <children>
                   <Label fx:id="dayFive" layoutX="36.0" layoutY="14.0" style="-fx-font-weight: bold;" text="Freitag" />
                </children>
             </Pane>
-            <Pane layoutX="30.0" layoutY="213.0" prefHeight="148.0" prefWidth="108.0" styleClass="subPane" style="-fx-background-color: #FFF;">
+            <Pane onMouseClicked="#changeDayTwo" layoutX="30.0" layoutY="213.0" prefHeight="148.0" prefWidth="108.0" styleClass="subPane" style="-fx-background-color: #FFF;">
                <children>
                   <Label fx:id="dayTwo" layoutX="31.0" layoutY="14.0" style="-fx-font-weight: bold;" text="Dienstag" />
                </children>
             </Pane>
-            <Pane layoutX="323.0" layoutY="213.0" prefHeight="148.0" prefWidth="108.0" styleClass="subPane" style="-fx-background-color: #FFF;">
+            <Pane onMouseClicked="#changeDayFour" layoutX="323.0" layoutY="213.0" prefHeight="148.0" prefWidth="108.0" styleClass="subPane" style="-fx-background-color: #FFF;">
                <children>
                   <Label fx:id="dayFour" layoutX="23.0" layoutY="14.0" style="-fx-font-weight: bold;" text="Donnerstag" />
                </children>
