--- a/src/main/resources/MainWindow/mainWindow.fxml
+++ b/src/main/resources/MainWindow/mainWindow.fxml
@@ -8,8 +8,6 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.image.Image?>
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" styleClass="myBorderPane" stylesheets="@../css/styles.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Frontend.MainWindow">
    <top>
       <MenuBar style="-fx-background-color: #85c0ff;" BorderPane.alignment="CENTER">
@@ -38,44 +36,58 @@
    <center>
       <Pane prefHeight="73.0" prefWidth="121.0" BorderPane.alignment="CENTER">
          <children>
-            <Label fx:id="temp" styleClass="displayTemp" layoutX="245.0" prefHeight="56.0" prefWidth="167.0" text="25 Grad" textFill="WHITE">
+            <Label fx:id="temp" layoutX="245.0" prefHeight="56.0" prefWidth="167.0" styleClass="displayTemp" text="25 Grad" textFill="WHITE">
                <font>
                   <Font size="45.0" />
                </font>
             </Label>
-            <ImageView style="-fx-rotate: 200px;" fitHeight="101.0" fitWidth="111.0" layoutX="237.0" layoutY="98.0" pickOnBounds="true" preserveRatio="true">
+
+             <Label fx:id="dayOne" layoutX="245.0" layoutY="66.0" styleClass="displayDate" text="Montag 27.08.2020" textFill="WHITE" />
+
+            <Pane layoutX="14.0" layoutY="246.0" onMouseClicked="#changeToFirstDay" prefHeight="116.0" prefWidth="86.0" style="-fx-background-color: #FFF;" styleClass="subPane">
+               <children>
+                  <Label fx:id="dayOne2" layoutX="18.0" layoutY="14.0" style="-fx-font-weight: bold;" text="Dienstag" />
+               </children>
+            </Pane>
+
+             <Pane layoutX="136.0" layoutY="246.0" onMouseClicked="#changeDayTwo" prefHeight="116.0" prefWidth="86.0" style="-fx-background-color: #FFF;" styleClass="subPane">
+                 <children>
+                     <Label fx:id="dayTwo" layoutX="20.0" layoutY="14.0" style="-fx-font-weight: bold;" text="Mittwoch" />
+                 </children>
+             </Pane>
+
+            <Pane layoutX="257.0" layoutY="246.0" onMouseClicked="#changeDayThree" prefHeight="116.0" prefWidth="86.0" style="-fx-background-color: #FFF;" styleClass="subPane">
+               <children>
+                  <Label fx:id="dayThree" layoutX="21" layoutY="14.0" style="-fx-font-weight: bold;" text="Donnerstag" />
+               </children>
+            </Pane>
+
+             <Pane layoutX="382.0" layoutY="246.0" onMouseClicked="#changeDayFour" prefHeight="116.0" prefWidth="86.0" style="-fx-background-color: #FFF;" styleClass="subPane">
+                 <children>
+                     <Label fx:id="dayFour" layoutX="19.0" layoutY="14.0" style="-fx-font-weight: bold;" text="Freitag" />
+                 </children>
+             </Pane>
+
+             <Pane layoutX="504.0" layoutY="246.0" onMouseClicked="#changeDayFive" prefHeight="116.0" prefWidth="86.0" style="-fx-background-color: #FFF;" styleClass="subPane">
+                 <children>
+                     <Label fx:id="dayFive" layoutX="23.0" layoutY="14.0" style="-fx-font-weight: bold;" text="Freitag" />
+                 </children>
+             </Pane>
+
+            <Label fx:id="minTemp" layoutX="46.0" layoutY="49.0" styleClass="displayDetails" text="Label" />
+            <Label fx:id="maxTemp" layoutX="46.0" layoutY="84.0" styleClass="displayDetails" text="Label" />
+            <Label fx:id="detail" layoutX="46.0" layoutY="122.0" styleClass="displayDetails" text="Label" />
+            <Label layoutX="490.0" layoutY="49.0" styleClass="displayDetails" text="Label" />
+            <Label layoutX="490.0" layoutY="84.0" styleClass="displayDetails" text="Label" />
+            <Label layoutX="490.0" layoutY="122.0" styleClass="displayDetails" text="Label" />
+            <!--<ImageView style="-fx-rotate: 200px;" fitHeight="101.0" fitWidth="111.0" layoutX="237.0" layoutY="98.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="/img/sun-icon.png" />
-               </image>
-            </ImageView>
+                        <Image url="/img/sun-icon.png" />
+                     </image>
+                  </ImageView>-->
 
-            <Pane layoutX="180.0" layoutY="213.0" onMouseClicked="#changeDayThree" prefHeight="148.0" prefWidth="108.0" style="-fx-background-color: #FFF;" styleClass="subPane">
-               <children>
-                  <Label fx:id="dayThree" layoutX="29.0" layoutY="14.0" style="-fx-font-weight: bold;" text="Mittwoch" />
-               </children></Pane>
-            <Pane layoutX="464.0" layoutY="213.0" onMouseClicked="#changeDayFive" prefHeight="148.0" prefWidth="108.0" style="-fx-background-color: #FFF;" styleClass="subPane">
-               <children>
-                  <Label fx:id="dayFive" layoutX="36.0" layoutY="14.0" style="-fx-font-weight: bold;" text="Freitag" />
-               </children>
-            </Pane>
-            <Pane layoutX="30.0" layoutY="213.0" onMouseClicked="#changeDayTwo" prefHeight="148.0" prefWidth="108.0" style="-fx-background-color: #FFF;" styleClass="subPane">
-               <children>
-                  <Label fx:id="dayTwo" layoutX="31.0" layoutY="14.0" style="-fx-font-weight: bold;" text="Dienstag" />
-               </children>
-            </Pane>
-            <Pane layoutX="323.0" layoutY="213.0" onMouseClicked="#changeDayFour" prefHeight="148.0" prefWidth="108.0" style="-fx-background-color: #FFF;" styleClass="subPane">
-               <children>
-                  <Label fx:id="dayFour" layoutX="23.0" layoutY="14.0" style="-fx-font-weight: bold;" text="Donnerstag" />
-               </children>
-            </Pane>
-            <Label fx:id="dayOne" styleClass="displayDate" layoutX="245.0" layoutY="66.0" text="Montag 27.08.2020" textFill="WHITE"/>
 
-            <Label fx:id="minTemp" styleClass="displayDetails" layoutX="46.0" layoutY="49.0" text="Label" />
-            <Label fx:id="maxTemp" styleClass="displayDetails" layoutX="46.0" layoutY="84.0" text="Label" />
-            <Label fx:id="detail" styleClass="displayDetails" layoutX="46.0" layoutY="122.0" text="Label" />
-            <Label styleClass="displayDetails" layoutX="490.0" layoutY="49.0" text="Label" />
-            <Label styleClass="displayDetails" layoutX="490.0" layoutY="84.0" text="Label" />
-            <Label styleClass="displayDetails" layoutX="490.0" layoutY="122.0" text="Label" />
+
          </children>
       </Pane>
    </center>
