--- a/src/main/resources/MainWindow/mainWindow.fxml
+++ b/src/main/resources/MainWindow/mainWindow.fxml
@@ -8,6 +8,8 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" styleClass="myBorderPane" stylesheets="@../css/styles.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Frontend.MainWindow">
    <top>
       <MenuBar style="-fx-background-color: #85c0ff;" BorderPane.alignment="CENTER">
@@ -80,11 +82,11 @@
             <Label layoutX="490.0" layoutY="49.0" styleClass="displayDetails" text="Label" />
             <Label layoutX="490.0" layoutY="84.0" styleClass="displayDetails" text="Label" />
             <Label layoutX="490.0" layoutY="122.0" styleClass="displayDetails" text="Label" />
-            <!--<ImageView style="-fx-rotate: 200px;" fitHeight="101.0" fitWidth="111.0" layoutX="237.0" layoutY="98.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="image" style="-fx-rotate: 200px;" fitHeight="101.0" fitWidth="111.0" layoutX="237.0" layoutY="98.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                        <Image url="/img/sun-icon.png" />
+                        <Image fx:id="img" url="/img/sun-icon.png" />
                      </image>
-                  </ImageView>-->
+                  </ImageView>
 
 
 
