--- a/src/main/resources/MainWindow/mainWindow.fxml
+++ b/src/main/resources/MainWindow/mainWindow.fxml
@@ -8,6 +8,12 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" styleClass="myBorderPane" stylesheets="@../css/styles.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Frontend.MainWindow">
@@ -44,37 +50,37 @@
                </font>
             </Label>
 
-             <Label fx:id="dayOne" layoutX="245.0" layoutY="66.0" styleClass="displayDate" text="Montag 27.08.2020" textFill="WHITE" />
+             <Label  fx:id="dayOne" layoutX="245.0" layoutY="66.0" styleClass="displayDate" text="Montag 27.08.2020" textFill="WHITE" />
 
-            <Pane layoutX="14.0" layoutY="246.0" onMouseClicked="#changeToFirstDay" prefHeight="116.0" prefWidth="86.0" style="-fx-background-color: #FFF;" styleClass="subPane">
-               <children>
-                  <Label fx:id="dayOne2" layoutX="18.0" layoutY="14.0" style="-fx-font-weight: bold;" text="Dienstag" />
-               </children>
-            </Pane>
+            <BorderPane layoutX="14.0" layoutY="246.0" onMouseClicked="#changeToFirstDay" prefHeight="116.0" prefWidth="86.0" style="-fx-background-color: #FFF;" styleClass="subPane">
+                <center>
+                    <Label BorderPane.alignment="TOP_CENTER" alignment="CENTER" fx:id="dayOne2" layoutX="18.0" layoutY="14.0" style="-fx-font-weight: bold;" text="Dienstag" />
+                </center>
+            </BorderPane>
 
-             <Pane layoutX="136.0" layoutY="246.0" onMouseClicked="#changeDayTwo" prefHeight="116.0" prefWidth="86.0" style="-fx-background-color: #FFF;" styleClass="subPane">
-                 <children>
-                     <Label fx:id="dayTwo" layoutX="20.0" layoutY="14.0" style="-fx-font-weight: bold;" text="Mittwoch" />
-                 </children>
-             </Pane>
+             <BorderPane layoutX="136.0" layoutY="246.0" onMouseClicked="#changeDayTwo" prefHeight="116.0" prefWidth="86.0" style="-fx-background-color: #FFF;" styleClass="subPane">
+                <center>
+                    <Label BorderPane.alignment="TOP_CENTER" fx:id="dayTwo" layoutX="20.0" layoutY="14.0" style="-fx-font-weight: bold;" text="Mittwoch" />
+                </center>
+             </BorderPane>
 
-            <Pane layoutX="257.0" layoutY="246.0" onMouseClicked="#changeDayThree" prefHeight="116.0" prefWidth="86.0" style="-fx-background-color: #FFF;" styleClass="subPane">
-               <children>
-                  <Label fx:id="dayThree" layoutX="21" layoutY="14.0" style="-fx-font-weight: bold;" text="Donnerstag" />
-               </children>
-            </Pane>
+            <BorderPane layoutX="257.0" layoutY="246.0" onMouseClicked="#changeDayThree" prefHeight="116.0" prefWidth="86.0" style="-fx-background-color: #FFF;" styleClass="subPane">
+                <center>
+                    <Label BorderPane.alignment="TOP_CENTER" fx:id="dayThree" layoutX="21" layoutY="14.0" style="-fx-font-weight: bold;" text="Donnerstag" />
+                </center>
+            </BorderPane>
 
-             <Pane layoutX="382.0" layoutY="246.0" onMouseClicked="#changeDayFour" prefHeight="116.0" prefWidth="86.0" style="-fx-background-color: #FFF;" styleClass="subPane">
-                 <children>
-                     <Label fx:id="dayFour" layoutX="19.0" layoutY="14.0" style="-fx-font-weight: bold;" text="Freitag" />
-                 </children>
-             </Pane>
+             <BorderPane layoutX="382.0" layoutY="246.0" onMouseClicked="#changeDayFour" prefHeight="116.0" prefWidth="86.0" style="-fx-background-color: #FFF;" styleClass="subPane">
+                 <center>
+                     <Label BorderPane.alignment="TOP_CENTER" fx:id="dayFour" layoutX="19.0" layoutY="14.0" style="-fx-font-weight: bold;" text="Freitag" />
+                 </center>
+             </BorderPane>
 
-             <Pane layoutX="504.0" layoutY="246.0" onMouseClicked="#changeDayFive" prefHeight="116.0" prefWidth="86.0" style="-fx-background-color: #FFF;" styleClass="subPane">
-                 <children>
-                     <Label fx:id="dayFive" layoutX="23.0" layoutY="14.0" style="-fx-font-weight: bold;" text="Freitag" />
-                 </children>
-             </Pane>
+             <BorderPane layoutX="504.0" layoutY="246.0" onMouseClicked="#changeDayFive" prefHeight="116.0" prefWidth="86.0" style="-fx-background-color: #FFF;" styleClass="subPane">
+                 <center>
+                     <Label BorderPane.alignment="TOP_CENTER" fx:id="dayFive" layoutX="23.0" layoutY="14.0" style="-fx-font-weight: bold;" text="Freitag" />
+                 </center>
+             </BorderPane>
 
             <Label fx:id="minTemp" layoutX="46.0" layoutY="49.0" styleClass="displayDetails" text="Label" />
             <Label fx:id="maxTemp" layoutX="46.0" layoutY="84.0" styleClass="displayDetails" text="Label" />
@@ -82,13 +88,11 @@
             <Label layoutX="490.0" layoutY="49.0" styleClass="displayDetails" text="Label" />
             <Label layoutX="490.0" layoutY="84.0" styleClass="displayDetails" text="Label" />
             <Label layoutX="490.0" layoutY="122.0" styleClass="displayDetails" text="Label" />
-            <ImageView fx:id="image" style="-fx-rotate: 200px;" fitHeight="101.0" fitWidth="111.0" layoutX="237.0" layoutY="98.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="image" fitHeight="101.0" fitWidth="111.0" layoutX="237.0" layoutY="98.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                        <Image fx:id="img" url="/img/sun-icon.png" />
-                     </image>
-                  </ImageView>
-
-
+                   <Image fx:id="img" url="/img/sun-icon.png" />
+               </image>
+            </ImageView>
 
          </children>
       </Pane>
