--- a/src/main/resources/MainWindow/mainWindow.fxml
+++ b/src/main/resources/MainWindow/mainWindow.fxml
@@ -22,7 +22,7 @@
         <menus>
           <Menu mnemonicParsing="false" text="File">
               <items>
-                  <MenuItem mnemonicParsing="false" text="Settings" />
+                  <MenuItem fx:id="settingMenu" onAction="#openSettings" mnemonicParsing="false" text="Settings" />
               </items>
             <items>
               <MenuItem fx:id="closeMenu" onAction="#closeWindow" mnemonicParsing="false" text="Close"/>
