main layout changed

--- a/src/main/resources/MainWindow/mainWindow.fxml
+++ b/src/main/resources/MainWindow/mainWindow.fxml
@@ -45,49 +45,47 @@
    </top>
 
    <center>
-      <Pane prefHeight="73.0" prefWidth="121.0" BorderPane.alignment="CENTER">
-         <children>
-             <HBox layoutX="23" spacing="100" alignment="BASELINE_CENTER">
-                 <VBox spacing="20">
-                     <padding>
-                         <Insets top="15" />
-                     </padding>
-                     <Label fx:id="minTemp" layoutX="46.0" layoutY="49.0" styleClass="displayDetails" text="Label" />
-                     <Label fx:id="maxTemp" layoutX="46.0" layoutY="84.0" styleClass="displayDetails" text="Label" />
-                     <Label fx:id="detail" layoutX="46.0" layoutY="122.0" styleClass="displayDetails" text="Label" />
-                 </VBox>
-                 <VBox spacing="5">
-                     <Label fx:id="temp" prefHeight="56.0" prefWidth="167.0" styleClass="displayTemp" text="25 Grad" textFill="WHITE">
-                         <font>
-                             <Font size="45.0" />
-                         </font>
-                     </Label>
+        <HBox spacing="100" BorderPane.alignment="CENTER">
+             <padding>
+                 <Insets left="23"/>
+             </padding>
+             <VBox spacing="20">
+                 <padding>
+                     <Insets top="15" />
+                 </padding>
+                 <Label fx:id="minTemp" layoutX="46.0" layoutY="49.0" styleClass="displayDetails" text="Label" />
+                 <Label fx:id="maxTemp" layoutX="46.0" layoutY="84.0" styleClass="displayDetails" text="Label" />
+                 <Label fx:id="detail" layoutX="46.0" layoutY="122.0" styleClass="displayDetails" text="Label" />
+             </VBox>
 
-                     <HBox spacing="5">
-                         <Label fx:id="dayOne" layoutX="245.0" layoutY="66.0" styleClass="displayDay" text="Montag 27.08.2020" textFill="WHITE" />
-                         <Label fx:id="displayDate" layoutX="340.0" layoutY="66.0" styleClass="displayDate" text="27.08.2020" textFill="WHITE" />
-                     </HBox>
+             <VBox spacing="5">
+                 <Label fx:id="temp" prefHeight="56.0" prefWidth="167.0" styleClass="displayTemp" text="25 Grad" textFill="WHITE">
+                     <font>
+                         <Font size="45.0" />
+                     </font>
+                 </Label>
 
-                     <ImageView fx:id="image" fitHeight="101.0" fitWidth="111.0" layoutX="237.0" layoutY="98.0" pickOnBounds="true" preserveRatio="true">
-                         <image>
-                             <Image fx:id="img" url="/img/sun-icon.png" />
-                         </image>
-                     </ImageView>
-                 </VBox>
+                 <HBox spacing="5">
+                     <Label fx:id="dayOne" layoutX="245.0" layoutY="66.0" styleClass="displayDay" text="Montag 27.08.2020" textFill="WHITE" />
+                     <Label fx:id="displayDate" layoutX="340.0" layoutY="66.0" styleClass="displayDate" text="27.08.2020" textFill="WHITE" />
+                 </HBox>
 
-                 <VBox spacing="20">
-                     <padding>
-                         <Insets top="15" />
-                     </padding>
-                     <Label layoutX="490.0" layoutY="49.0" styleClass="displayDetails" text="Label" />
-                     <Label layoutX="490.0" layoutY="84.0" styleClass="displayDetails" text="Label" />
-                     <Label layoutX="490.0" layoutY="122.0" styleClass="displayDetails" text="Label" />
-                 </VBox>
-             </HBox>
+                 <ImageView fx:id="image" fitHeight="101.0" fitWidth="111.0" layoutX="237.0" layoutY="98.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                         <Image fx:id="img" url="/img/sun-icon.png" />
+                     </image>
+                 </ImageView>
+             </VBox>
 
-         </children>
-      </Pane>
-
+             <VBox spacing="20">
+                 <padding>
+                     <Insets top="15" />
+                 </padding>
+                 <Label layoutX="490.0" layoutY="49.0" styleClass="displayDetails" text="Label" />
+                 <Label layoutX="490.0" layoutY="84.0" styleClass="displayDetails" text="Label" />
+                 <Label layoutX="490.0" layoutY="122.0" styleClass="displayDetails" text="Label" />
+             </VBox>
+        </HBox>
    </center>
 
     <bottom>
